objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Uses_Lawyers_com__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uses Lawyers.com?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uses_Servicemagic__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this is company uses Servicemagic.</inlineHelpText>
        <label>Uses Servicemagic?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vertical_Site_1__c</fullName>
        <label>Vertical Site 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vertical_Site_2__c</fullName>
        <label>Vertical Site 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vertical_Site_3__c</fullName>
        <label>Vertical Site 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_is_the_URL__c</fullName>
        <label>What is the URL?</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>What_types_of_clients_would_you_like__c</fullName>
        <label>What types of clients would you like?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Who_Makes_Decision__c</fullName>
        <label>Who Makes Advertising Decision?</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Win_Loss_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Win/Loss Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Win_Loss_Analysis_Date__c</fullName>
        <label>Win/Loss Analysis Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>With_whom_online__c</fullName>
        <label>With Whom Online?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_com__c</fullName>
        <defaultValue>false</defaultValue>
        <label>YP.com?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Years_in_Business__c</fullName>
        <label>Years in Business</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yellow_Page_Ad__c</fullName>
        <description>If they advertised in the Yellow Pages, how big was the ad.</description>
        <label>Yellow Page Adsize</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yellow_Page_Spend__c</fullName>
        <description>How much the prospect spends on Yellow Page advertising per year.</description>
        <label>Yellow Page Annual Spend</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yellowbook_com__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Yellowbook.com?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yelp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Yelp?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yodle_Dental_Blog_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be checked if the person has been subscribed to the Yodle Dental blog.</description>
        <inlineHelpText>To be checked if the person has been subscribed to the Yodle Dental blog.</inlineHelpText>
        <label>Yodle Dental Blog Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yodle_Law_Blog_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be checked off if the person has been subscribed to the Yodle Law blog.</description>
        <inlineHelpText>To be checked off if the person has been subscribed to the Yodle Law blog.</inlineHelpText>
        <label>Yodle Law Blog Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yodle_Local_Search_Engine_Interest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Yodle Local Search Engine Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yodler_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Yodler Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Extension__c</fullName>
        <label>Zip/Postal Extension</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>days_since_ownership_change__c</fullName>
        <formula>today()- ownership_change_date__c</formula>
        <label>days since ownership change</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>email_for_converting__c</fullName>
        <label>email (for converting)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_activity__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>last activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>lead_gen_rep_profile__c</fullName>
        <formula>Lead_Gen_Rep__r.Profile.Name</formula>
        <label>lead gen rep profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_CompanyCity__c</fullName>
        <label>Company City (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_CompanyCountry__c</fullName>
        <label>Company Country (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_CompanyIndustry__c</fullName>
        <label>Company Industry (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_CompanyLinkedIn__c</fullName>
        <label>Company LinkedIn (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_CompanyName__c</fullName>
        <label>Company Name (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_CompanyPhone__c</fullName>
        <label>Company Phone (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_CompanyRevenueRange__c</fullName>
        <label>Company Revenue Range (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_CompanyScore__c</fullName>
        <label>Company Score (LS)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leadspace_CompanySizeRange__c</fullName>
        <label>Company Size Range (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_CompanyState__c</fullName>
        <label>Company State (LS)</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_CompanyStreet__c</fullName>
        <label>Company Street (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_CompanyWebsite__c</fullName>
        <label>Company Website (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_CompanyZip__c</fullName>
        <label>Company Zip (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_Email__c</fullName>
        <label>Email (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_FirstName__c</fullName>
        <label>First Name (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_LastName__c</fullName>
        <label>Last Name (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_LinkedIn__c</fullName>
        <label>LinkedIn (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_Score__c</fullName>
        <label>Score (LS)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leadspace_Title__c</fullName>
        <label>Title (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_VerificationSource__c</fullName>
        <label>Verification Source (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>marketing_owner__c</fullName>
        <label>marketing owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>owned_by_partner__c</fullName>
        <formula>if((OR( OwnerId ="005600000017pdF",OwnerId= "005600000017yl6", OwnerId="005600000017aRH",OwnerId="005600000017pdJ",OwnerId="005600000017pdE", OwnerId="005600000017yl1")),"true","false")</formula>
        <label>owned by partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ownership_change_date__c</fullName>
        <label>ownership change date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>partner_web_form__c</fullName>
        <label>Partner Web Form</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>referral_possible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>referral possible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>senior_helper_biz_consultant__c</fullName>
        <label>senior helper biz consultant</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscription_date__c</fullName>
        <label>subscription date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24_Short__c</fullName>
        <description>Shows the current local time (without date) for the Lead in 24-hr format.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
"Unknown",
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 )
&amp;":"&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp; " " &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,"")
)</formula>
        <inlineHelpText>Shows the local time (without date) for the Lead in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24__c</fullName>
        <description>Shows the current local time for the Lead in 24-hr format.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
"Unknown",
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 6, 2 ) &amp; "/" &amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 9, 2 ) &amp; "/" &amp;
LEFT( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 4 ) &amp; " " &amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 )
&amp;":"&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp; " " &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,"")
)</formula>
        <inlineHelpText>Shows the local time for the Lead in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_Short__c</fullName>
        <description>Shows the current local time (without date) for the Lead.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
"Unknown",
TEXT(
IF(
OR(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 12
),
12,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp;":"&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp;" "&amp;
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
"AM",
"PM"
)
&amp; " " &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,"")
)</formula>
        <inlineHelpText>Shows the local time (without date) for the Lead.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time__c</fullName>
        <description>Shows the current local time for the Lead.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
"Unknown",
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 6, 2 ) &amp; "/" &amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 9, 2 ) &amp; "/" &amp;
LEFT( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 4 ) &amp; " " &amp;
TEXT(
IF(
OR(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 12
),
12,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp;":"&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp;" "&amp;
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
"AM",
"PM"
)
&amp; " " &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,"")
)</formula>
        <inlineHelpText>Shows the local time for the Lead.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_Full__c</fullName>
        <description>Full timezone name.</description>
        <inlineHelpText>Full timezone name.</inlineHelpText>
        <label>Timezone (Full)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_IANA__c</fullName>
        <description>Timezone as defined by Internet Assigned Numbers Authority (IANA).</description>
        <inlineHelpText>Timezone as defined by Internet Assigned Numbers Authority (IANA).</inlineHelpText>
        <label>Timezone (IANA)</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone__c</fullName>
        <description>Current timezone abbreviation (PST, EST,etc..)</description>
        <inlineHelpText>Timezone abbreviation (PST, EST,etc..)</inlineHelpText>
        <label>Timezone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__UTF_Offset__c</fullName>
        <description>Shows the current UTC timezone offset of the Lead. Uses the address information, and in its absence the Phone number field in the calculation.</description>
        <inlineHelpText>Shows the UTC timezone offset of the Lead.</inlineHelpText>
        <label>UTC Offset</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advertise_Online__c</fullName>
        <label>Do You Advertise Online?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advertise__c</fullName>
        <label>Do You Advertise?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adwords_Done_by_Third_Party__c</fullName>
        <label>Adwords Done by Third Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dex</fullName>
                </value>
                <value>
                    <fullName>FindLaw</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Orange Soda</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Reach Local</fullName>
                </value>
                <value>
                    <fullName>Superpages.com</fullName>
                </value>
                <value>
                    <fullName>Website Development Company</fullName>
                </value>
                <value>
                    <fullName>WebVisible</fullName>
                </value>
                <value>
                    <fullName>Yellowpages.com</fullName>
                </value>
                <value>
                    <fullName>Prosites.com</fullName>
                </value>
                <value>
                    <fullName>SEM Company</fullName>
                </value>
                <value>
                    <fullName>Web.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Test__c</fullName>
        <label>Auto Test</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_type__c</fullName>
        <description>For Partner Lead Account Layout</description>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PMS</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>IT Integrator</fullName>
                </value>
                <value>
                    <fullName>Business Consultant/Coach</fullName>
                </value>
                <value>
                    <fullName>Broker/Transition Services</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Dental Supplies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Remarketing__c</fullName>
        <label>DB Remarketing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reassignment 1</fullName>
                </value>
                <value>
                    <fullName>Reassignment 2</fullName>
                </value>
                <value>
                    <fullName>Reassignment 3</fullName>
                </value>
                <value>
                    <fullName>Reassignment 4</fullName>
                </value>
                <value>
                    <fullName>Reassignment 5</fullName>
                </value>
                <value>
                    <fullName>Reassignment 6</fullName>
                </value>
                <value>
                    <fullName>Reassignment 7</fullName>
                </value>
                <value>
                    <fullName>Reassignment 8</fullName>
                </value>
                <value>
                    <fullName>Reassignment 9</fullName>
                </value>
                <value>
                    <fullName>Reassignment 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Authorized_To_Provide_Financing__c</fullName>
        <label>Dealer Authorized To Provide Financing?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <label>Dealer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Liberties</fullName>
                </value>
                <value>
                    <fullName>Liberties Plus</fullName>
                </value>
                <value>
                    <fullName>CCE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <label>Duplicate?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed Duplicate</fullName>
                </value>
                <value>
                    <fullName>Not a Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_Season__c</fullName>
        <label>High Season</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Winter</fullName>
                </value>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Summer</fullName>
                </value>
                <value>
                    <fullName>Fall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Media Opportunity</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Paid Search</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Digital Marketing Summit</fullName>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Yodle Brand Networks Website</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mailer</fullName>
                </value>
                <value>
                    <fullName>email promo</fullName>
                </value>
                <value>
                    <fullName>mailer promo</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Corporate Requested</fullName>
                </value>
                <value>
                    <fullName>Added Another Account</fullName>
                </value>
                <value>
                    <fullName>Culligan 2015</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manufacturer_Brand__c</fullName>
        <label>Manufacturer Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coleman</fullName>
                </value>
                <value>
                    <fullName>York</fullName>
                </value>
                <value>
                    <fullName>Luxaire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Size__c</fullName>
        <label>Market Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Metro</fullName>
                </value>
                <value>
                    <fullName>Suburban</fullName>
                </value>
                <value>
                    <fullName>Rural</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Channels_Used__c</fullName>
        <label>Marketing Channels Used</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Organic</fullName>
                </value>
                <value>
                    <fullName>Sponsored</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Ownership__c</fullName>
        <label>Marketing Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Commission_Master__c</fullName>
        <label>National Commission Master</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Prospect_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Johnson Controls</fullName>
                </value>
                <value>
                    <fullName>MaidPro</fullName>
                </value>
                <value>
                    <fullName>MiracleEar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Company_Type__c</fullName>
        <label>National Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Prospect_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Individual Location</fullName>
                </value>
                <value>
                    <fullName>Franchisee</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Exclusive Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Multi-Location</fullName>
                </value>
                <value>
                    <fullName>Franchise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_SDR_Disposition__c</fullName>
        <description>This field displays SDR dispositions for records that are not convertible.</description>
        <label>National SDR Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Blocked</fullName>
                </value>
                <value>
                    <fullName>Current Client</fullName>
                </value>
                <value>
                    <fullName>Do Not Call</fullName>
                </value>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Inbound_Team__c</fullName>
        <label>Original Inbound Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AZ-Barden</fullName>
                </value>
                <value>
                    <fullName>AZ-Flanagan</fullName>
                </value>
                <value>
                    <fullName>AZ-SDR</fullName>
                </value>
                <value>
                    <fullName>AZ-Teitelman</fullName>
                </value>
                <value>
                    <fullName>AZ-Venneri</fullName>
                </value>
                <value>
                    <fullName>BOS-Albee</fullName>
                </value>
                <value>
                    <fullName>BOS-Doyon</fullName>
                </value>
                <value>
                    <fullName>BOS-Gross</fullName>
                </value>
                <value>
                    <fullName>BOS-Sampson</fullName>
                </value>
                <value>
                    <fullName>BOS-Williams</fullName>
                </value>
                <value>
                    <fullName>CLT-Eaton</fullName>
                </value>
                <value>
                    <fullName>CLT-Gulukyan</fullName>
                </value>
                <value>
                    <fullName>CLT-Harper</fullName>
                </value>
                <value>
                    <fullName>CLT-Petrinec</fullName>
                </value>
                <value>
                    <fullName>CLT-Pirrone</fullName>
                </value>
                <value>
                    <fullName>CLT-Robbe</fullName>
                </value>
                <value>
                    <fullName>CLT-Rozenblat</fullName>
                </value>
                <value>
                    <fullName>Inbound Team</fullName>
                </value>
                <value>
                    <fullName>JCI</fullName>
                </value>
                <value>
                    <fullName>NYC-Asnis</fullName>
                </value>
                <value>
                    <fullName>NYC-Brooks</fullName>
                </value>
                <value>
                    <fullName>NYC-Cedeno</fullName>
                </value>
                <value>
                    <fullName>NYC-Defina</fullName>
                </value>
                <value>
                    <fullName>NYC-DePatria</fullName>
                </value>
                <value>
                    <fullName>NYC-Granatowski</fullName>
                </value>
                <value>
                    <fullName>NYC-Merrick</fullName>
                </value>
                <value>
                    <fullName>PHL</fullName>
                </value>
                <value>
                    <fullName>AZ-Rubin</fullName>
                </value>
                <value>
                    <fullName>AZ-Glenn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ownership_Type__c</fullName>
        <label>Ownership Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proprietary - Organization</fullName>
                </value>
                <value>
                    <fullName>Proprietary - Individual</fullName>
                </value>
                <value>
                    <fullName>Non-Profit - Other</fullName>
                </value>
                <value>
                    <fullName>Non-Profit - Religious</fullName>
                </value>
                <value>
                    <fullName>Non-Profit - Private</fullName>
                </value>
                <value>
                    <fullName>Government - Local</fullName>
                </value>
                <value>
                    <fullName>Government - State/County</fullName>
                </value>
                <value>
                    <fullName>Government - Combination Government &amp; Voluntary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>